[fix] Adjust the project modal padding-top so that there is no gap between the navbar and the modal

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,7 +17,7 @@
   margin-top: 15px;
 }
 
-.modal-content {
+#project-modal-content {
   margin-top: 20px;
 }
 
